|| Version 3.46 changes ||
  * Wed Jul 29 2009 Stewart Adam <s.adam at diffingo.com>
    - Redo autotools config files so that glib gettext is no longer required
    - Fix encode/decode capability detection for testbench
    - Use mutagen for reading and writing audio file tags
    - Fix a regression that made users unable to browse for folders in the
      conversion settings

|| Version 3.45.5 changes ||
    - Suppots drag-and-drop of directories
    - Add support for KDE4 service menus in Dolphin and Konqueror
    - Add tag requirements to the Capabilities window
    - Create WAV files to a temporary directory instead of same folder as original
    - Add new "Remove Diacritis From Fileames" option
    - When adding files, filter out unsupported audio files
    - Use pynotify in place of blinking when possible
    - Bugfixes:
      - Call correct path when using a non-default prefix
      - Fix invalid usage when decoding MP3 files via Lame
      - Fix encoding to AC3 when output file already exists
      - When user has skipped a file, don't complain to the user about -9 retval
      - Detect tags correctly when certain fields are missing
    - Use internal error & warning dialogs instead of rat.hig
    - Add config.py for a better configuration file implementation
    - Update bitrates for OGG, MPC and AAC
    - Support AAC tags via libmp4v2
    - Add a test suite / "make check"

|| Version 3.45.4 changes ||
    - Fix bug when updating the preferences file (rh#442502 pt2)
    - Fix bug when loading defaults

|| Version 3.45.3 changes ||
    - Fix a bug where all file operations would fail when the file to convert
      contained quotes
    - Semi-Win* support... Coming soon!
    - Bugfix: The decode and encode fields were reversed in Features
    - Bugfix: WMA, SHA are NOT decodable for now.
    - New Chinese (zh_CN) translation (Thanks Harris!)
    - Move to trash is gone, use custom folder selection instead
    - Don't default to Output Folder --> Override