@@ -5,6 +5,9 @@
     - Use mutagen for reading and writing audio file tags
     - Fix a regression that made users unable to browse for folders in the
       conversion settings
+    - Implement a logger similar to that of fwbackups to log a session's
+      activity so that bug reporting and the subsequent troubleshooting is
+      easier.
 
 || Version 3.45.5 changes ||
     - Suppots drag-and-drop of directories
